# quickstart-resources

./: .gitignore  README.md  TODO.md  mcp-docs.txt  package-lock.json  pyproject.toml
.github/workflows/: ci.yml  mcp-safety-scan.yml
mcp-client-go/: README.md  go.mod  go.sum  main.go
mcp-client-python/: README.md  client.py  client_gemini.py  pyproject.toml  requirements.txt
mcp-client-ruby/: Gemfile  README.md  client.rb
mcp-client-rust/: Cargo.toml  README.md
mcp-client-rust/src/: main.rs
mcp-client-typescript/: README.md  http-bridge.ts  index-openai.ts  index.ts  package-lock.json  package.json  tsconfig.json
test_llm_connection/: llm.py
tests/helpers/: package-lock.json  package.json
weather/: pyproject.toml
weather-server-go/: README.md  go.mod  main.go
weather-server-python/: pyproject.toml  test_asyncio.py  weather.py
weather-server-ruby/: Gemfile  README.md  weather.rb
weather-server-rust/: Cargo.toml  README.md
weather-server-typescript/: .cursorrules  README-MCP-Expert.md  README.md  mcp-expert-prompt-en.md  mcp-expert-prompt.md  package-lock.json  package.json
weather-server-typescript/.cursor/rules/: langgpt-helper.mdc  mcp-expert.mdc
weather-server-typescript/docs/: langgpt-framework.md
weather-server-typescript/examples/: prompt-examples.ts  weather-client-example.ts
weather-server-typescript/src/: index.ts
weather-server-typescript/test/: test-prompt-generator.ts  test-weather-server.ts
