[package]
name = "mcp-client-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
genai = "0.4.2"
rmcp = { version = "0.8.0", features = ["server", "client", "transport-io", "transport-child-process"] }
tokio = { version = "1.47.1", features = ['full']}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
serde_json = "1.0.128"
dotenvy = "0.15.7"
reqwest = "0.12.23"
